--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
     <title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello mother fucker</h1>
+<h1>Hello mother fucker its a great course</h1>
 </body>
 </html>
